leptos_macro/tests/view/13_multiple_generic_params_first_wrong_type.stderr
error[E0277]: expected a `Fn()` closure, found `bool`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:13:14
   |
13 |             <Inner fun_a=true fun_b=|| 42/>
   |              ^^^^^ expected an `Fn()` closure, found `bool`
   |
   = help: the trait `Fn()` is not implemented for `bool`
   = note: wrap the `bool` in a closure with no arguments: `|| { /* code */ }`
note: required by a bound in `Inner`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:21:8
   |
19 | fn Inner<F, G>(fun_a: F, fun_b: G) -> impl IntoView
   |    ----- required by a bound in this function
20 | where
21 |     F: Fn() -> bool,
   |        ^^^^^^^^^^^^ required by this bound in `Inner`

error[E0599]: the method `__check_fun_a` exists for struct `InnerProps<bool, {closure@$DIR/tests/view/13_multiple_generic_params_first_wrong_type.rs:13:37: 13:39}>`, but its trait bounds were not satisfied
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:13:26
   |
13 |             <Inner fun_a=true fun_b=|| 42/>
   |                          ^^^^
...
18 | #[component]
   | ------------ method `__check_fun_a` not found for this struct
   |
note: the following trait bounds were not satisfied:
      `bool: Fn<()>`
      `bool: FnOnce<()>`
  --> tests/view/13_multiple_generic_params_first_wrong_type.rs:21:8
   |
18 | #[component]
   | ------------
...
21 |     F: Fn() -> bool,
   |        ^^^^^^^^^^^^
   |        |       |
   |        |       unsatisfied trait bound introduced here
   |        unsatisfied trait bound introduced here
